<resources>
    <string name="app_name">Workers Joint</string>
    <string name="alarm_notification">alarm notification</string>
    <string name="default_notification_channel_id">123</string>
    <string name="login">LOGIN</string>
    <string name="your_contact_number">YOUR CONTACT NUMBER</string>
    <string name="tap_to_enter">tap to enter</string>
    <string name="or">OR</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="continue1">CONTINUE</string>
    <string name="choose_account_type">CHOOSE ACCOUNT TYPE</string>
    <string name="business">Business</string>
    <string name="contractor_sub_contractor">contractor/ sub-contractor</string>
    <string name="worker">Worker</string>
    <string name="sign_up">SIGN UP</string>
    <string name="language">Language</string>
    <string name="thanks_for_applying_this_job_n_your_application_has_been_received">Thanks for applying this job !!! Your application has been received.</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="choose_job_type">CHOOSE JOB TYPE</string>
    <string name="about">About</string>
    <string name="personal_information">Personal Information</string>
    <string name="d_o_b">D.O.B.</string>
    <string name="gender">Gender</string>
    <string name="current_address">Current Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="total_home_based_units">Total Home Based Units</string>
    <string name="home_based_units_location">Home Based Units Location</string>
    <string name="total_male_workers">Total Male Workers</string>
    <string name="total_female_workers">Total Female Workers</string>
    <string name="types_of_work">Types of Work</string>
    <string name="previous_employer_or_brand">Previous Employer or Brand</string>
    <string name="view_samples">View Samples</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="active">ACTIVE</string>
    <string name="edit">EDIT</string>
    <string name="job_type">Job Type</string>
    <string name="design_sample">Design Sample</string>
    <string name="piece_rate">Piece Rate</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="re_enter_pin">RE-ENTER PIN</string>
    <string name="create_pin_to_continue">CREATE PIN TO CONTINUE</string>
    <string name="enter_pin_to_continue">ENTER PIN TO CONTINUE</string>
    <string name="filter">Filter</string>
    <string name="skills">Skills</string>
    <string name="experience">Experience</string>
    <string name="clear">CLEAR</string>
    <string name="location">Location</string>
    <string name="job_role">Job Role</string>
    <string name="education">Education</string>
    <string name="salary_type">Salary Type</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="preferred_skill_set">Preferred Skill set</string>
    <string name="gender_preference">Gender Preference</string>
    <string name="working_hours">Working Hours</string>
    <string name="salary_package">Salary Package</string>
    <string name="company_details">Company Details</string>
    <string name="total_days_for_completion">Total Days for Completion</string>
    <string name="job_title">JOB TITLE <font color="red">*</font></string>
    <string name="skills1">SKILLS <font color="red">*</font></string>
    <string name="preferred_skills_if_any">PREFERRED SKILLS (IF ANY)</string>
    <string name="location1">LOCATION <font color="red">*</font></string>
    <string name="experience1">EXPERIENCE <font color="red">*</font></string>
    <string name="job_role1">JOB ROLE <font color="red">*</font></string>
    <string name="gender_preference1">GENDER PREFERENCE</string>
    <string name="education1">EDUCATION</string>
    <string name="working_hours1">WORKING HOURS</string>
    <string name="salary_package1">SALARY PACKAGE</string>
    <string name="salary_type1">SALARY TYPE <font color="red">*</font></string>
    <string name="submit">NEXT</string>
    <string name="job_type1">JOB TYPE <font color="red">*</font></string>
    <string name="no_of_days_for_completion">NO. OF DAYS FOR COMPLETION <font color="red">*</font></string>
    <string name="upload_take_photo">upload/ take photo</string>
    <string name="enter_your_details">ENTER YOUR DETAILS</string>
    <string name="category">Category</string>
    <string name="religion">Religion</string>
    <string name="education_status">Education Status</string>
    <string name="marital_status">Marital Status</string>
    <string name="sector">Sector</string>
    <string name="employer_previous_current">Employer(Previous/ Current)</string>
    <string name="owns_a_home_based_unit">Owns a home based unit</string>
    <string name="update_your_details">UPDATE YOUR DETAILS</string>
    <string name="specialized_in">Specialized in</string>
    <string name="certified_by_goodweave">Certified by Goodweave India</string>
    <string name="view_all_jobs_posted_by_the_company">View all jobs posted by the company</string>
    <string name="reg_no">Reg. No.</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_no">Contact No.</string>
    <string name="address">Address</string>
    <string name="head_office">Head Office</string>
    <string name="manufacturing_units">Manufacturing Units</string>
    <string name="factory_outlet">Factory Outlet</string>
    <string name="importing_countries">Importing Countries</string>
    <string name="total_workers">Total Workers</string>
    <string name="website">Website</string>
    <string name="email_address">Email address</string>
    <string name="your_name">YOUR NAME <font color="red">*</font></string>
    <string name="your_logo">YOUR LOGO</string>
    <string name="registration_no_if_any">REGISTRATION NO. (IF ANY)</string>
    <string name="contact_person1">CONTACT PERSON <font color="red">*</font></string>
    <string name="your_current_address1">YOUR CURRENT ADDRESS <font color="red">*</font></string>
    <string name="pin_code">PIN CODE</string>
    <string name="state">STATE <font color="red">*</font></string>
    <string name="district">DISTRICT <font color="red">*</font></string>
    <string name="village_town_area">VILLAGE/ TOWN/ AREA</string>
    <string name="street">STREET</string>
    <string name="head_office_address">HEAD OFFICE ADDRESS <font color="red">*</font></string>
    <string name="same_as_above">same as above</string>
    <string name="types_of_products">TYPES OF PRODUCTS <font color="red">*</font></string>
    <string name="hit_enter_to_add_products">hit enter to add products</string>
    <string name="hit_enter_to_add_countries">hit enter to add countries</string>
    <string name="total_workers1">TOTAL WORKERS (IN HOUSE)<font color="red">*</font></string>
    <string name="goodweave_certification">GOODWEAVE INDIA CERTIFICATION</string>
    <string name="certificate_expiry_date">CERTIFICATE EXPIRY DATE</string>
    <string name="website_address">WEBSITE ADDRESS</string>
    <string name="email_address1">EMAIL ADDRESS</string>
    <string name="your_photo">YOUR PHOTO</string>
    <string name="your_d_o_b">YOUR D.O.B. <font color="red">*</font></string>
    <string name="your_gender">YOUR GENDER <font color="red">*</font></string>
    <string name="about1">ABOUT</string>
    <string name="name_of_business_if_any">Name of the business/ firm</string>
    <string name="year_of_establishment">YEAR OF ESTABLISHMENT</string>
    <string name="your_permanent_address">YOUR PERMANENT ADDRESS <font color="red">*</font></string>
    <string name="no_of_home_based_units">NO. OF HOME BASED UNITS</string>
    <string name="location_of_home_based_units">LOCATION OF HOME BASED UNITS</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="types_of_work1">TYPES OF WORK <font color="red">*</font></string>
    <string name="availability">AVAILABILITY <font color="red">*</font></string>
    <string name="previous_employer_or_brands">PREVIOUS EMPLOYER OR BRANDS</string>
    <string name="ok">OK</string>
    <string name="select">SELECT</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_us">About Us</string>
    <string name="faqs">Knowledge Center</string>
    <string name="policies">Policies</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="support_help">Support/ Help</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
    <string name="job_title_goes_here">JOB TITLE GOES HERE</string>
    <string name="salary">Salary</string>
    <string name="company_name">Company Name</string>
    <string name="view_details"><![CDATA[View Details >]]></string>
    <string name="posted_on">Posted on</string>
    <string name="your_category">YOUR CATEGORY <font color="red">*</font></string>
    <string name="your_religion">YOUR RELIGION <font color="red">*</font></string>
    <string name="your_educational_status">YOUR EDUCATIONAL STATUS</string>
    <string name="your_marital_status">YOUR MARITAL STATUS <font color="red">*</font></string>
    <string name="number_of_children">NUMBER OF CHILDREN <font color="red">*</font></string>
    <string name="number_of_children_below_6_yrs">NUMBER OF CHILDREN BELOW 6 YRS. <font color="red">*</font></string>
    <string name="number_of_children_b_w_6_14_yrs">NUMBER OF CHILDREN B/W 6-14 YRS. <font color="red">*</font></string>
    <string name="number_of_children_b_w_15_18_yrs">NUMBER OF CHILDREN B/W 15-18 YRS. <font color="red">*</font></string>
    <string name="number_of_children_going_to_school">NUMBER OF CHILDREN GOING TO SCHOOL <font color="red">*</font></string>
    <string name="your_sector">YOUR SECTOR <font color="red">*</font></string>
    <string name="your_skills">YOUR SKILLS</string>
    <string name="your_experience">YOUR EXPERIENCE</string>
    <string name="your_employment_status">YOUR EMPLOYMENT STATUS</string>
    <string name="your_employer_previous_current">YOUR EMPLOYER (PREVIOUS/ CURRENT)</string>
    <string name="owns_a_home_based_unit1">OWNS A HOME BASED UNIT <font color="red">*</font></string>
    <string name="number_of_workers">NUMBER OF WORKERS</string>
    <string name="number_of_looms">PRODUCTION MACHINERIES / TOOLS</string>
    <string name="preferred_location_for_work">PREFERRED LOCATION FOR WORK</string>
    <string name="design_sample1">DESIGN/ SAMPLE</string>
    <string name="piece_rate1">PIECE RATE</string>
    <string name="sector1">SECTOR <font color="red">*</font></string>
    <string name="job_location">JOB LOCATION</string>
    <string name="man_days_required2">MAN-DAYS REQUIRED <font color="red">*</font></string>
    <string name="submit2">Next</string>
    <string name="i_will_fill_all_the_information_myself_and_is_true_to_my_knowledge">I will fill all the information myself and is true to my knowledge.</string>
    <string name="i_authorize_goodweave_or_its_representative_to_fill_the_information_do_registration_on_my_behalf_through_telephonic_communication_and_have_shared_my_otp_for_this_purpose">I authorize Goodweave India or its representative to fill the information/do registration on my behalf through telephonic communication and have shared my OTP for this purpose.</string>
    <string name="read_terms_amp_conditions"><![CDATA[Read Terms & Conditions]]></string>
    <string name="display_name_of_business">Display name of Business</string>
    <string name="display_contact_number">Display Contact number</string>
    <string name="display_contact_person">Display Contact Person</string>
    <string name="display_email_id">Display Email ID</string>
    <string name="display_all">Display All</string>
    <string name="enter_data">Enter Data</string>
</resources>